Bugfix: Condition tooltips couldn't be read if it was the first message in the chat window. Solved via adding whitespace margin ontop of the first message in the chat.

--- a/src/pf2e.scss
+++ b/src/pf2e.scss
@@ -2819,6 +2819,9 @@ button > i.far {
   visibility: visible;
   opacity: 1;
 }
+#chat-log li.message:first-child {
+  margin-top: 150%;
+}
 .status-effects .status-effect-summary {  
   visibility: hidden;
   width: 174px;
